--- a/Backend/index.CSS
+++ b/Backend/index.CSS
@@ -13,7 +13,7 @@ nav ul li a {
     display: block;
     padding: 10px 20px;
     text-decoration: none;
-    color: white;
+    color: rgb(255, 0, 0);
 }
 
 nav ul li:hover {
