--- a/Frontend/templates/html/cadastro_profissional.html
+++ b/Frontend/templates/html/cadastro_profissional.html
@@ -25,7 +25,7 @@
                 <p>Usuário: Administrador (Admin)</p>
                 <p>Papel: ADMIN</p>
             </div>
-            <button style="margin: 10px 0% 10px 80%;">SAIR</button> 
+            <button id="logoutButton" style="margin: 10px 0% 10px 80%;">SAIR</button>
         </div>
     
     </header>
