--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -45,11 +45,11 @@ h1 {
 .input__field:focus-visible ~ .input__label,
 .input__field:valid ~ .input__label {
   transform: translate(0, -30px) scale(0.8);
-  color: #4caf50;
+  color: #2540d8;
 }
 
 .input__field:is(:focus-visible, :valid) {
-  outline-color: #4caf50;
+  outline-color: #4d63e2;
 }
 
 .input__icon-wrapper {
@@ -72,7 +72,7 @@ h1 {
 button[type="submit"] {
   width: 100%;
   padding: 10px;
-  background-color: #4caf50;
+  background-color: #73abff;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -81,7 +81,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #0a64ca;
 }
 
 
