--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -18,7 +18,7 @@
         </div>
     
         <div id="title">
-            <h1 style="font-family: fantasy; font-size: 3em;"></h1>
+            <h1 style="font-family: fantasy; font-size: 3em;">S.G.I.E</h1>
         </div>
     
         <div>
