--- a/Frontend/templates/html/cadastro_equipamento.html
+++ b/Frontend/templates/html/cadastro_equipamento.html
@@ -104,7 +104,7 @@
                         <input type="date" id="data" name="data" required><br><br>
 
                         <label for="quantidade">Quantidade de Equipamentos:</label>
-                        <input type="number" id="quantidade" name="quantidade" required><br><br>
+                        <input type="number" id="quantidade" required min="1"><br><br>
 
                         <label for="observacoes">Observações:</label><br>
                         <textarea id="observacoes" name="observacoes"></textarea><br><br>
