--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -160,7 +160,7 @@
     </main>
 
 
-    <script src="aluguel.js"></script>
+    <script src="../aluguel.js"></script>
     <script src="../js/headre.js"></script>
 </body>
 </html>
