--- a/Frontend/templates/html/cadastro_equipamento.html
+++ b/Frontend/templates/html/cadastro_equipamento.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../img/logo.png" alt="logo">
+            <img src="../img/equipamento.png" alt="logo">
         </div>
         <div id="logo2">
             <img src="../img/logo2.png" alt="logo">
