--- a/Frontend/templates/html/relatorios.html
+++ b/Frontend/templates/html/relatorios.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../img/logo.png" alt="logo">
+            <img src="../img/relatorio.png" alt="logo">
         </div>
         <div id="logo2">
             <img src="../img/logo2.png" alt="logo">
