--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../img/logo.png" alt="logo">
+            <img src="../img/aluguel.png" alt="logo">
         </div>
         <div id="logo2">
             <img src="../img/logo2.png" alt="logo">
