--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -16,13 +16,13 @@
         <div id="logo2">
             <img src="../img/logo2.png" alt="logo">
         </div>
-    
         <div id="title">
-            <h1 style="font-family: fantasy; font-size: 3em;">S.G.I.E</h1>
+            
+            <h1 style="font-family: fantasy; font-size: 3em; ">S.G.I.E</h1>
         </div>
         <div>
             <div id="usuarioInfo">
-                <p>Usuário: Administrador (Admin)</p>
+                <p>Usuário: Administrador</p>
             </div>
             <button id="logoutButton" style="margin: 10px 0% 10px 80%;">SAIR</button>
         </div>
@@ -150,15 +150,14 @@
                     <th>Descrição do Equipamento</th>
                     <th>Quantidade</th>
                     <th>Observação</th>
+                    <th>Açãos</th>
                 </tr>
             </thead>
             <tbody>
             </tbody>
         </table>   
     </main>
-
-
-    <script src="../aluguel.js"></script>
+    <script src="../js/aluguel.js"></script>
     <script src="../js/headre.js"></script>
 </body>
 </html>
