--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -22,7 +22,7 @@
         </div>
         <div>
             <div id="usuarioInfo">
-                <p>Usuário: Administrador</p>
+                <p>Usuário: Administrador (Admin)</p>
             </div>
             <button id="logoutButton" style="margin: 10px 0% 10px 80%;">SAIR</button>
         </div>
