--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -93,16 +93,16 @@
                 <div class="form-container">
                     <div>
                         <label for="setor">Setor Solicitante:</label>
-                        <input type="text" id="setor" required>
+                        <input type="text" id="setor" placeholder="Setor Solicitante..." required>
             
                         <label for="servidor">Servidor Solicitante:</label>
-                        <input type="text" id="servidor" required>
+                        <input type="text" id="servidor" placeholder="Servidor Solicitante..." required>
 
                         <br>
                         <br>
             
                         <label for="matricula">Matrícula:</label>
-                        <input type="text" id="matricula" required>
+                        <input type="text" id="matricula" placeholder="Matrícula..." required>
             
                         <label for="dataEmprestimo">Data de Empréstimo:</label>
                         <input type="date" id="dataEmprestimo" required>
@@ -114,16 +114,16 @@
                         <input type="date" id="dataDevolucao" required>
             
                         <label for="equipamento">Equipamento:</label>
-                        <input type="text" id="equipamento" required>
+                        <input type="text" id="equipamento" placeholder="Equipamento..." required>
                         
                         <br>
                         <br>
 
                         <label for="descricaoEquipamento">Descrição do Equipamento:</label>
-                        <input type="text" id="descricaoEquipamento" required>
+                        <input type="text" id="descricaoEquipamento" placeholder="Descrição..." required>
             
                         <label for="quantidade">Quantidade:</label>
-                        <input type="number" id="quantidade" required min="1">
+                        <input type="number" id="quantidade" placeholder="Quantidade..." required min="1">
                         
                         <br>
                         <br>
