--- a/Frontend/templates/html/cadastro_equipamento.html
+++ b/Frontend/templates/html/cadastro_equipamento.html
@@ -90,16 +90,13 @@
                 <h2>Casdastro de Equipamentos</h2>
                 <div class="form-container">
                     <form id="formulario">
-                        <label for="nome">Nome do Setor:</label>
-                        <input type="text" id="nome" name="nome" required><br><br>
+                        <label for="nome">Nome do Equipamento:</label>
+                        <input type="text" id="nome" name="nome" placeholder="Digite um nome..." required><br><br>
 
-                        <label for="solicitante">Nome do Solicitante:</label>
-                        <input type="text" id="solicitante" name="solicitante" required><br><br>
+                        <label for="matricula">Código do equipamento:</label>
+                        <input type="text" id="matricula" name="matricula" placeholder="Digite um código..." required><br><br>
 
-                        <label for="matricula">Matrícula do Solicitante:</label>
-                        <input type="text" id="matricula" name="matricula" required><br><br>
-
-                        <label for="data">Data do Empréstimo:</label>
+                        <label for="data">Data de Aquisição:</label>
                         <input type="date" id="data" name="data" required><br><br>
 
                         <label for="quantidade">Quantidade de Equipamentos:</label>
