--- a/Frontend/templates/html/cadastro_setor.html
+++ b/Frontend/templates/html/cadastro_setor.html
@@ -93,13 +93,11 @@
                 <br>
                 <form id="cadastroSetorForm">
                     <label for="nomeSetor">Nome do Setor:</label>
-                    <input type="text" id="nomeSetor" name="nomeSetor" required><br>
+                    <input type="text" id="nomeSetor" name="nomeSetor" placeholder="Digite um nome..." required><br>
                     <br>
-                    <label for="prioridade">Prioridade:</label>
-                    <input type="number" id="prioridade" name="prioridade" required min="1" max="5"><br>
                     <br>
                     <label for="responsavel">Responsável:</label>
-                    <input type="text" id="responsavel" name="responsavel" required><br>
+                    <input type="text" id="responsavel" name="responsavel" placeholder="Responsavel..." required><br>
                     <br>
                     <button id="botao" onclick="buscar()">Salvar</button>
                 </form>
