--- a/Frontend/templates/html/cadastro_profissional.html
+++ b/Frontend/templates/html/cadastro_profissional.html
@@ -94,25 +94,25 @@
 
                     <form id="cadastroProfissionalForm">
                         <label for="nome">Nome:</label>
-                        <input type="text" id="nome" name="nome" required><br>
+                        <input type="text" id="nome" name="nome" placeholder="Digite um nome..." required><br>
                         <br>
                         <label for="funcao">Função:</label>
-                        <input type="text" id="funcaooooooooooooooo" name="funcao" required><br>
+                        <input type="text" id="funcaooooooooooooooo" name="funcao" placeholder="Digite a função..." required><br>
                         <br>
                         <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required><br>
+                        <input type="email" id="email" name="email" placeholder="ex:alguem@hotmail.com" required><br>
                         <br>
                         <label for="senha">Senha:</label>
-                        <input type="password" id="senha" name="senha" required><br>
+                        <input type="password" id="senha" name="senha" placeholder="Digite uma senha..." required><br>
                         <br>
                         <label for="repetirSenha">Repetir Senha:</label>
                         <input type="password" id="repetirSenha" name="repetirSenha" required><br>
                         <br>
                         <label for="setor">Setor:</label>
-                        <input type="text" id="setor" name="setor" required><br>
+                        <input type="text" id="setor" name="setor" placeholder="Digite um setor..." required><br>
                         <br>
                         <label for="matricula">Matrícula:</label>
-                        <input type="text" id="matricula" name="matricula" required><br>
+                        <input type="text" id="matricula" name="matricula" placeholder="Digite uma matrícula..." required><br>
                         <br>
                         <button id="botao" onclick="Salvar()">Cadastrar</button>
                     </form>
