--- a/Frontend/templates/html/estoque.html
+++ b/Frontend/templates/html/estoque.html
@@ -105,7 +105,7 @@
                         <select id="status">
                             <option value="">Selecione</option>
                             <option value="pendente">Pendente</option>
-                            <option value="emAndamento">Em Andamento</option>
+                            <option value="andamento">Em Andamento</option>
                             <option value="concluido">Concluído</option>
                         </select>
 
