--- a/Frontend/templates/html/aluguel.html
+++ b/Frontend/templates/html/aluguel.html
@@ -63,7 +63,7 @@
                 </li>
         
                 <li class="list" style="--clr:#b145e9">
-                    <a href="../html/relatorios.html?menu=5"><span class="icon">RELATORIO</span></a>
+                    <a href="../html/relatorios.html?menu=5"><span class="icon"></span></a>
                 </li>
             </ul>
         </div>
